--- a/p8105_hw2_jh4054.html
+++ b/p8105_hw2_jh4054.html
@@ -249,12 +249,12 @@ div.tocify {
 <p>Load packages and set specifications for visual outputs</p>
 <pre class="r"><code>#load packages
 library(tidyverse)
-## ── Attaching packages ────────────────────────────────────────────────── tidyverse 1.2.1 ──
+## ── Attaching packages ─────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
 ## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
 ## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
 ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
 ## ✔ readr   1.1.1     ✔ forcats 0.3.0
-## ── Conflicts ───────────────────────────────────────────────────── tidyverse_conflicts() ──
+## ── Conflicts ────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()
 library(ggridges)
@@ -378,15 +378,64 @@ precip_2017 = readxl::read_excel(path = &quot;./data/HealthyHarborWaterWheelTota
 precip_years = bind_rows(precip_2016, precip_2017)</code></pre>
 <div id="mr.trash-wheel" class="section level4">
 <h4>Mr. Trash Wheel</h4>
-<ol style="list-style-type: decimal">
-<li>sum of precipitation in 2017 = 32.93 inches</li>
-<li>median sports_balls in 2016 = 26</li>
-</ol>
-<pre class="r"><code>#total precipitation in 2017
+<p>This section explores attributes of the Mr. Trash Wheel dataset.</p>
+<pre class="r"><code>#total precipitation in 2016
+sum(precip_2016$prcp_inches)
+## [1] 39.95
+
+#total precipitation in 2017
 sum(precip_2017$prcp_inches)
 ## [1] 32.93
 
-#median number of sports balls in a dumpster in 2016
+#number of dumpsters filled by month in 2016
+trash_wheel_2016 = trash_wheel %&gt;% 
+  filter(year == 2016) %&gt;% 
+  arrange(date)
+
+plyr::count(trash_wheel_2016$month) %&gt;% 
+  arrange(desc(freq))
+##            x freq
+## 1       july    8
+## 2   february    6
+## 3       june    6
+## 4      april    5
+## 5     august    5
+## 6      march    5
+## 7   december    4
+## 8        may    3
+## 9   november    3
+## 10 september    3
+## 11   october    2
+## 12   january    1
+
+#number of dumpsters filled by month in 2017
+trash_wheel_2017 = trash_wheel %&gt;% 
+  filter(year == 2017) %&gt;% 
+  arrange(date)
+
+plyr::count(trash_wheel_2017$month) %&gt;% 
+  arrange(desc(freq))
+##            x freq
+## 1      april   18
+## 2     august    8
+## 3        may    8
+## 4       july    5
+## 5      march    4
+## 6       june    3
+## 7   february    2
+## 8   november    2
+## 9    october    2
+## 10 september    2
+## 11   january    1
+
+#total weight in tons of trash in 2016 and 2017
+sum(trash_wheel_2016$weight_tons)
+## [1] 164.59
+
+sum(trash_wheel_2017$weight_tons)
+## [1] 174.84
+
+#median number of sports balls &amp; other trash items in a dumpster, 2016
 trash_wheel %&gt;% 
   group_by(year) %&gt;% 
   summarise(
@@ -403,6 +452,7 @@ trash_wheel %&gt;%
 ## 3  2016           26         40.4            2974.       3560.     2752.
 ## 4  2017            8         20.5            1998.       1989.     2237.
 ## 5  2018            3          6.30           1264.       1404.     1278.</code></pre>
+<p>The Mr. Trash Wheel dataset tracks information about litter collected from the Jones Falls River, from May 2014 to July 2018. Each line of observation corresponds to a filled dumpster, along with weight of dumpster, volume of dumpster, homes powered, and count of trash items: plastic bottles, polystyrene, cigarette butts, glass bottles, chip bags, sports balls. Additionally, monthly precipitation is shown for each year. Total precipitation (inches) in 2016 and 2017 was 39.95 and 32.93, respectively. Total weight (tons) of trash collected in 2016 and 2016 was 164.59 and 174.84, respectively. In 2016, months with the highest number of filled dumpsters were July (n=8), Feb (n=6), and June (n=6). In 2016, the two months with the highest precipitation were July (6.09“) and Feb (5.32”). In 2017, months with the highest number of filled dumpsters were April (n=18), Aug (n=8), and May (n=8). In 2017, the months with the highest precipitation were July (7.09“), May (5.64”), and Aug (4.44“). These trends suggest an association between precipitation level and number of dumpsters filled. In 2016, the median number of sports balls in a dumpster was 26.</p>
 </div>
 </div>
 <div id="problem-3" class="section level3">
